test/functions/resolution/errors/testBadCallCandidates.2.good
testBadCallCandidates.chpl:45: In function 'main':
testBadCallCandidates.chpl:53: error: unresolved call 'owned D.foo("hi")'
testBadCallCandidates.chpl:4: note: this candidate did not match: C.foo(x: string)
testBadCallCandidates.chpl:53: note: because method call receiver with type owned D
testBadCallCandidates.chpl:3: note: is passed to formal 'this: borrowed C'
testBadCallCandidates.chpl:17: note: candidates are: D.foo(x: int)
testBadCallCandidates.chpl:36: note:                 foo(x: C)
